--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,132 +5,6 @@
 
 
 <div layout:fragment="content">
-<!--<div class="header-top-w3layouts">-->
-<!--	<div class="container">-->
-<!--		<div class="col-md-6 logo-w3">-->
-<!--			<a href="index.html"><img src="/images/logo2.png" alt=" " /><h1>IMAGE Farm</h1></a>-->
-<!--		</div>-->
-<!--		<div class="col-md-6 phone-w3l">-->
-<!--			<ul>-->
-<!--				<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>-->
-<!--			</ul>-->
-<!--		</div>-->
-<!--		<div class="clearfix"></div>-->
-<!--	</div>-->
-<!--</div>-->
-<!--<div class="header-bottom-w3ls">-->
-<!--	<div class="container">-->
-<!--		<div class="col-md-7 navigation-agileits">-->
-<!--			<nav class="navbar navbar-default">-->
-<!--				<div class="navbar-header nav_2">-->
-<!--					<button type="button" class="navbar-toggle collapsed navbar-toggle1" data-toggle="collapse" data-target="#bs-megadropdown-tabs">-->
-<!--						<span class="sr-only">Toggle navigation</span>-->
-<!--						<span class="icon-bar"></span>-->
-<!--						<span class="icon-bar"></span>-->
-<!--						<span class="icon-bar"></span>-->
-<!--					</button>-->
-<!--				</div>-->
-<!--				<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">-->
-<!--					<ul class="nav navbar-nav ">-->
-<!--						<li class=" active"><a href="index.html" class="hyper "><span>Home</span></a></li>-->
-<!--						<li class="dropdown ">-->
-<!--							<a href="#" class="dropdown-toggle  hyper" data-toggle="dropdown" ><span>Menu<b class="caret"></b></span></a>-->
-<!--							<ul class="dropdown-menu multi">-->
-<!--								<div class="row">-->
-<!--									<div class="col-sm-4">-->
-<!--										<ul class="multi-column-dropdown">-->
-
-<!--											<li><a href="women.html"><i class="fa fa-angle-right" aria-hidden="true"></i>아이콘</a></li>-->
-<!--											<li><a href="men.html"><i class="fa fa-angle-right" aria-hidden="true"></i>일러스트</a></li>-->
-<!--											<li><a href="kids.html"> <i class="fa fa-angle-right" aria-hidden="true"></i>컬러</a></li>-->
-<!--											<li><a href="party.html"><i class="fa fa-angle-right" aria-hidden="true"></i>사진</a></li>-->
-
-<!--										</ul>-->
-
-<!--									</div>-->
-<!--									&lt;!&ndash; <div class="col-sm-4">-->
-<!--                                        <ul class="multi-column-dropdown">-->
-<!--                                            <li><a href="casuals.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Casuals</a></li>-->
-<!--                                            <li><a href="night.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Night Wear</a></li>-->
-<!--                                            <li><a href="formals.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Formals</a></li>-->
-<!--                                            <li><a href="inner.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Inner Wear</a></li>-->
-
-<!--                                        </ul>-->
-<!--                                    </div> &ndash;&gt;-->
-<!--									&lt;!&ndash; <div class="col-sm-4 w3l">-->
-<!--                                        <a href="women.html"><img src="images/menu1.jpg" class="img-responsive" alt=""></a>-->
-<!--                                    </div> &ndash;&gt;-->
-<!--									<div class="clearfix"></div>-->
-<!--								</div>-->
-<!--							</ul>-->
-<!--						</li>-->
-<!--						&lt;!&ndash; <li class="dropdown">-->
-<!--								<a href="#" class="dropdown-toggle hyper" data-toggle="dropdown" ><span> Personal Care <b class="caret"></b></span></a>-->
-<!--								<ul class="dropdown-menu multi multi1">-->
-<!--									<div class="row">-->
-<!--										<div class="col-sm-4">-->
-<!--											<ul class="multi-column-dropdown">-->
-<!--												<li><a href="jewellery.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Jewellery </a></li>-->
-<!--												<li><a href="watches.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Watches</a></li>-->
-<!--												<li><a href="cosmetics.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Cosmetics</a></li>-->
-<!--												<li><a href="deos.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Deo & Perfumes</a></li>-->
-
-<!--											</ul>-->
-
-<!--										</div>-->
-<!--										<div class="col-sm-4">-->
-
-<!--											<ul class="multi-column-dropdown">-->
-<!--												<li><a href="haircare.html"> <i class="fa fa-angle-right" aria-hidden="true"></i>Hair Care </a></li>-->
-<!--												<li><a href="shoes.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Shoes</a></li>-->
-<!--												<li><a href="handbags.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Handbags</a></li>-->
-<!--												<li><a href="skincare.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Skin care</a></li>-->
-
-<!--											</ul>-->
-
-<!--										</div>-->
-<!--										<div class="col-sm-4 w3l">-->
-<!--											<a href="jewellery.html"><img src="images/menu2.jpg" class="img-responsive" alt=""></a>-->
-<!--										</div>-->
-<!--										<div class="clearfix"></div>-->
-<!--									</div>-->
-<!--								</ul>-->
-<!--						</li> &ndash;&gt;-->
-<!--&lt;!&ndash;						<li><a href="about.html" class="hyper"><span>About</span></a></li>&ndash;&gt;-->
-<!--						&lt;!&ndash; <li><a href="contact.html" class="hyper"><span>Contact Us</span></a></li> &ndash;&gt;-->
-<!--					</ul>-->
-<!--				</div>-->
-<!--			</nav>-->
-<!--		</div>-->
-<!--		<script>-->
-<!--			$(document).ready(function(){-->
-<!--				$(".dropdown").hover(-->
-<!--						function() {-->
-<!--							$('.dropdown-menu', this).stop( true, true ).slideDown("fast");-->
-<!--							$(this).toggleClass('open');-->
-<!--						},-->
-<!--						function() {-->
-<!--							$('.dropdown-menu', this).stop( true, true ).slideUp("fast");-->
-<!--							$(this).toggleClass('open');-->
-<!--						}-->
-<!--				);-->
-<!--			});-->
-<!--		</script>-->
-
-<!--		<div class="col-md-1 cart-wthree">-->
-<!--			<div class="cart">-->
-<!--				<form action="#" method="post" class="last">-->
-<!--					<input type="hidden" name="cmd" value="_cart" />-->
-<!--					<input type="hidden" name="display" value="1" />-->
-<!--					<button class="w3view-cart" type="submit" name="submit" value="">장바구니<i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>-->
-<!--					<div><a href="login.html">Login</a></div>-->
-<!--				</form>-->
-
-<!--			</div>-->
-<!--		</div>-->
-<!--		<div class="clearfix"></div>-->
-<!--	</div>-->
-<!--</div>-->
 <div class="banner-agile">
 	<div class="container">
 		<h2>WELCOME TO</h2>
@@ -182,6 +56,9 @@
 		<div class="clearfix"></div>
 	</div>
 </div>
+
+
+
 <div class="top-products">
 	<div class="container">
 		<h3>Top Products</h3>
@@ -906,6 +783,8 @@
 		});
 	});
 </script>
+
+
 <div class="fandt">
 	<div class="container">
 		<div class="col-md-6 features">
@@ -949,21 +828,21 @@
 							<div class="banner-wrap">
 								<img src="/images/c1.png" alt=" " class="img-responsive" />
 								<p>Nam elementum magna id nibh pretium suscipit varius tortor. Phasellus in lorem sed massa consectetur fermentum. Praesent pellentesque sapien euismod.</p>
-								<h4># Andrew</h4>
+								<h4># 남아연</h4>
 							</div>
 						</article>
 						<article style="position: absolute; width: 100%; opacity: 0;">
 							<div class="banner-wrap">
 								<img src="/images/c2.png" alt=" " class="img-responsive" />
 								<p>Morbi semper, risus dignissim sagittis iaculis, diam est ornare neque, accumsan risus tortor at est. Vivamus auctor quis lacus sed interdum celerisque.</p>
-								<h4># Lucy</h4>
+								<h4># 박용성</h4>
 							</div>
 						</article>
 						<article style="position: absolute; width: 100%; opacity: 0;">
 							<div class="banner-wrap">
 								<img src="/images/c3.png" alt=" " class="img-responsive" />
 								<p>Fusce non cursus quam, in hendrerit sem. Nam nunc dui, venenatis vitae porta sed, sagittis id nisl. Pellentesque celerisque  eget ullamcorper vehicula. </p>
-								<h4># Martina</h4>
+								<h4># 이승재</h4>
 							</div>
 						</article>
 					</div>
@@ -977,6 +856,8 @@
 		$('.example1').wmuSlider();
 	</script>
 </div>
+
+
 <!-- top-brands -->
 <div class="top-brands">
 	<div class="container">
@@ -1031,71 +912,5 @@
 	</div>
 </div>
 <!-- //top-brands -->
-
-<!--<div class="footer">-->
-<!--	<div class="container">-->
-<!--		<div class="col-md-3 footer-grids fgd1">-->
-<!--			<a href="index.html"><img src="/images/logo2.png" alt=" " /><h3>FASHION<span>CLUB</span></h3></a>-->
-<!--			<ul>-->
-<!--				<li>1234k Avenue, 4th block,</li>-->
-<!--				<li>New York City.</li>-->
-<!--				<li><a href="mailto:info@example.com">info@example.com</a></li>-->
-<!--				<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>-->
-<!--				<a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>-->
-<!--				<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>-->
-<!--				<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>-->
-<!--			</ul>-->
-<!--		</div>-->
-<!--		<div class="col-md-3 footer-grids fgd2">-->
-<!--			<h4>Information</h4>-->
-<!--			<ul>-->
-<!--				<li><a href="contact.html">Contact Us</a></li>-->
-<!--				<li><a href="icons.html">Web Icons</a></li>-->
-<!--				<li><a href="typography.html">Typography</a></li>-->
-<!--				<li><a href="faq.html">FAQ's</a></li>-->
-<!--			</ul>-->
-<!--		</div>-->
-<!--		<div class="col-md-3 footer-grids fgd3">-->
-<!--			<h4>Shop</h4>-->
-<!--			<ul>-->
-<!--				<li><a href="jewellery.html">Jewellery</a></li>-->
-<!--				<li><a href="cosmetics.html">Cosmetics</a></li>-->
-<!--				<li><a href="Shoes.html">Shoes</a></li>-->
-<!--				<li><a href="deos.html">Deos</a></li>-->
-<!--			</ul>-->
-<!--		</div>-->
-<!--		<div class="col-md-3 footer-grids fgd4">-->
-<!--			<h4>My Account</h4>-->
-<!--			<ul>-->
-
-
-<!--				<li><a href="register.html">Register</a></li>-->
-<!--				<li><a href="recommended.html">Recommended </a></li>-->
-<!--				<li><a href="payment.html">Payments</a></li>-->
-<!--			</ul>-->
-<!--		</div>-->
-<!--		<div class="clearfix"></div>-->
-<!--		<p class="copy-right">© 2016 Fashion Club . All rights reserved | Design by <a href="http://w3layouts.com"> W3layouts.</a></p>-->
-<!--	</div>-->
-<!--</div>-->
-<!--&lt;!&ndash; cart-js &ndash;&gt;-->
-<!--<script src="/js/minicart.js"></script>-->
-<!--<script>-->
-<!--	w3ls1.render();-->
-
-<!--	w3ls1.cart.on('w3sb1_checkout', function (evt) {-->
-<!--		var items, len, i;-->
-
-<!--		if (this.subtotal() > 0) {-->
-<!--			items = this.items();-->
-
-<!--			for (i = 0, len = items.length; i < len; i++) {-->
-<!--				items[i].set('shipping', 0);-->
-<!--				items[i].set('shipping2', 0);-->
-<!--			}-->
-<!--		}-->
-<!--	});-->
-<!--</script>-->
-<!--&lt;!&ndash; //cart-js &ndash;&gt;-->
 </div>
 </html>
