--- a/src/main/resources/templates/member/findMember.html
+++ b/src/main/resources/templates/member/findMember.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript">
 
-        $(document).on('click', '#checkEmail', function() {
+        $(document).on('click', '#checkEmail', function () {
             const email = $("#email").val();
 
             if (email == "" || email == null || email == undefined) {
@@ -16,11 +16,11 @@
             }
             const sendEmail = document.forms["sendEmail"];
             $.ajax({
-                url : "/members/findId",
-                type : "post",
-                data : { 'memberEmail': email },
-                dataType : "text",
-                success : function(result) {
+                url: "/members/findId",
+                type: "post",
+                data: {'memberEmail': email},
+                dataType: "text",
+                success: function (result) {
                     console.log(result)
                     if (result === 'null') {
                         alert('가입되지 않은 이메일입니다!');
@@ -29,7 +29,7 @@
                         sendEmail.submit();
                     }
                 },
-                error : function(xhr) {
+                error: function (xhr) {
                     alert("에러코드 = " + xhr.status);
                 }
             });
@@ -37,23 +37,26 @@
     </script>
 </th:block>
 
-<div id="container" layout:fragment="content">
-    <form role="form" class="text-start" method="post" name="sendEmail" action="/members/sendEmail">
-        <br></br>
-        <h1 class="title">비밀번호 찾기</h1>
-        <div class="login-form">
-            <div class="form-group">
-                <input type="email" id="email" name="memberEmail" class="form-control" placeholder="회원가입시 입력했던 이메일을 입력하세요." style="width:400px; margin-left:50px; margin-top:40px;" required>
-                <p style="margin-left:80px; margin-top:20px;">입력한 이메일로 임시 비밀번호가 전송됩니다!</p>
+<div id="logins" layout:fragment="content">
+
+    <div class="main-agileits">
+            <div class="form-w3agile">
+                <h3>비밀번호 찾기</h3>
+                <form role="form" method="post" name="sendEmail" action="/members/sendEmail">
+                <div>
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <input type="email" id="email" name="memberEmail" class="form-control"
+                               placeholder="회원가입시 입력했던 이메일을 입력하세요." required>
+                        <p>입력한 이메일로 임시 비밀번호가 전송됩니다!</p>
+                    <div class="clearfix"></div>
+                </div>
+                    <input type="submit" value="비밀번호 발송">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                </form>
             </div>
-            <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-            <div class="button_container">
-                <button type="button" id="checkEmail" class="button" style="margin-top:20px">&nbsp;&nbsp;비밀번호 발송&nbsp;&nbsp;</button>
-                <br>
-            </div>
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-        </div>
-    </form>
+
+    </div>
+
 </div>
 
 </html>
