--- a/src/main/resources/templates/member/myPage.html
+++ b/src/main/resources/templates/member/myPage.html
@@ -12,14 +12,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- 사용자 script 추가 -->
 <th:block layout:fragment="css">
     <style>
-    /* 가운데 정렬할 내용을 감싸는 컨테이너에 적용합니다. */
-    .sign-form {
-        text-align: left; /* 텍스트를 수평으로 가운데 정렬합니다. */
-        display: flex;
-        flex-direction: column;
-        align-items: center; /* 내용을 수직으로 가운데 정렬합니다. */
-        justify-content: center; /* 내용을 수평으로 가운데 정렬합니다. */
-    }
+        /* 가운데 정렬할 내용을 감싸는 컨테이너에 적용합니다. */
+        .sign-form {
+            text-align: left; /* 텍스트를 수평으로 가운데 정렬합니다. */
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* 내용을 수직으로 가운데 정렬합니다. */
+            justify-content: center; /* 내용을 수평으로 가운데 정렬합니다. */
+        }
     </style>
 </th:block>
 
@@ -32,39 +32,57 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             if (errorMessage != null) {
                 alert(errorMessage);
             }
+
+            // 회원정보 수정 버튼 클릭 시 이벤트 처리
+            $("#updateMemberInfo").click(function () {
+                window.location.href = "/members/updateForm"; // 수정 페이지 URL로 이동
+            });
         });
     </script>
 </th:block>
 
-    <div layout:fragment="content">
-        <br>
-        <h1 class="title">내 정보</h1>
-        <br>
-        <div class="sign-form">
+<div layout:fragment="content">
+    <br>
+    <h1 class="title">내 정보</h1>
+    <br>
+    <div class="sign-form">
+        <form action="/members/update" method="post">
+            <input type="hidden" name="id" th:value="${member.id}">
             <div class="form-group">
                 <label th:for="email">이메일</label>
-                <input type="text" th:value="${member.email}" class="form-control" style="width:250px;" disabled>
+                <input type="text" name="email" th:value="${member.email}" class="form-control" style="width:250px;"
+                       readonly>
+            </div>
+            <div class="form-group">
+                <label th:for="password">비밀번호 변경</label>
+                <input type="password" name="password" th:value="${member.password}" class="form-control" style="width:250px;">
             </div>
             <div class="form-group">
                 <label th:for="name">이름</label>
-                <input type="text" th:value="${member.name}" class="form-control" style="width:250px;" disabled>
-            </div>
-            <div class="form-group">
-                <label th:for="role">역할</label>
-                <input type="text" class="form-control" style="width:250px;" disabled
-                       th:value="${#strings.equals(member.role, 'ADMIN') ? '관리자' : '회원'}">
+                <input type="text" name="name" th:value="${member.name}" class="form-control" style="width:250px;">
             </div>
             <div class="form-group">
                 <label th:for="adress">주소</label>
-                <input type="text" th:value="${member.address}" class="form-control" style="width:250px;" disabled>
+                <input type="text" name="address" th:value="${member.address}" class="form-control"
+                       style="width:250px;">
+            </div>
+            <div class="form-group">
+                <label th:for="role">역할</label>
+                <input type="text" name="role" class="form-control" style="width:250px;"
+                       th:value="${#strings.equals(member.role, 'ADMIN') ? 'ADMIN' : 'USER'}" readonly>
             </div>
             <div class="form-group">
                 <label th:for="email">가입일</label>
-                <input type="text" th:value="${#temporals.format(member.regTime, 'yyyy-MM-dd')}" class="form-control" style="width:250px;" disabled>
+                <input type="text" name="regTime" th:value="${#temporals.format(member.regTime, 'yyyy-MM-dd')}"
+                       class="form-control" style="width:250px;" readonly>
+            </div>
+            <div class="form-group">
+                <button id="updateMemberInfo" class="btn btn-primary">회원정보 수정</button>
             </div>
             <div>
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             </div>
-        </div>
+        </form>
     </div>
+</div>
 </html>
