--- a/src/main/resources/templates/member/myPage.html
+++ b/src/main/resources/templates/member/myPage.html
@@ -79,6 +79,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="form-group">
                 <button id="updateMemberInfo" class="btn btn-primary">회원정보 수정</button>
             </div>
+            <div class="form-group">
+                <a href="/members/delete" class="btn btn-danger">회원 탈퇴</a>
+            </div>
             <div>
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             </div>
