--- a/src/main/resources/templates/member/myPage.html
+++ b/src/main/resources/templates/member/myPage.html
@@ -48,6 +48,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="sign-form">
         <form action="/members/update" method="post">
             <input type="hidden" name="id" th:value="${member.id}">
+            <input type="hidden" name="social" th:value="${member.social}">
             <div class="form-group">
                 <label th:for="email">이메일</label>
                 <input type="text" name="email" th:value="${member.email}" class="form-control" style="width:250px;"
@@ -76,8 +77,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <input type="text" name="regTime" th:value="${#temporals.format(member.regTime, 'yyyy-MM-dd')}"
                        class="form-control" style="width:250px;" readonly>
             </div>
+
             <div class="form-group">
                 <button id="updateMemberInfo" class="btn btn-primary">회원정보 수정</button>
+            </div>
+            <div class="form-group">
+                <a href="/members/delete" class="btn btn-danger">회원 탈퇴</a>
             </div>
             <div>
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
